# dUltra-os

./: .gitignore  .pre-commit-config.yaml  LICENSE  LLaDA-8B-Instruct  README.md  env.yml  pyproject.toml  utils.py
diffu_grpo/: accel_reward.py  data_utils.py  diffu_grpo_config.py  diffu_grpo_train.py  diffu_grpo_trainer.py  math500_utils.py  reward_func.py  test_apps_reward.py
diffu_grpo/sbatch_scripts/: debug.sh  grpo_exp.sh  run.sh  train.yaml
eval_coding/: eval_coding.sh  eval_no_planner.sh  plot_factor_sweep.py  run_dultra_coding_factor_sweep.sh
eval_coding/lm_eval/: __init__.py  __main__.py  evaluator.py  evaluator_utils.py  utils.py
eval_coding/lm_eval/api/: metrics.py  model.py  registry.py  samplers.py  task.py
eval_coding/lm_eval/caching/: cache.py
eval_coding/lm_eval/filters/: selection.py
eval_coding/lm_eval/loggers/: evaluation_tracker.py  utils.py  wandb_logger.py
eval_coding/lm_eval/models/: __init__.py  diffllm.py  fast_dllm.py  grpo_lladou.py  huggingface.py  utils.py
eval_coding/lm_eval/prompts/: __init__.py
eval_coding/lm_eval/tasks/: README.md  __init__.py
eval_coding/lm_eval/tasks/humaneval/: humaneval_instruct.yaml  sanitize_utils.py  utils.py
eval_coding/lm_eval/tasks/ifeval/: instructions.py  instructions_registry.py  instructions_util.py
eval_coding/lm_eval/tasks/mbpp/: utils.py  (+1 more)
eval_math/: eval.py  generate.py  gsm8k.py  math500.py  parse_and_get_acc.py  parser_helper.py  parser_json.py  parsers.py  plot_factor_sweep.py  run_dultra_coding_math_seed_sweep.sh  run_dultra_math_factor_sweep.sh  run_eval.sh  run_fastdllm_eval.sh
model/: load_qwen.py  path_utils.py
model/inference/: inference_fastdllm.py  inference_lladou.py
model/llada/: config.json  configuration_llada.py  layers.py  lladou.py  modeling_llada.py
model/llada/lladou_config/: config.json
planner/: callback.py  data.py  planner_train.py  planner_trainer.py  tillicum_train.sh
planner/conf/: config.yaml
scripts/: upload.sh  upload_checkpoint.py
(+2 files in other folders)
